tests/sqllogic/sdb/pg/site_docs/sql/functions/dateformat.test
control substitution on

# DOCS_TEST: example_001

# DOCS_TEST_BODY

query
SELECT strftime(DATE '1992-03-02', '%d/%m/%Y');
----
strftime
02/03/1992

# DOCS_TEST: example_002

# DOCS_TEST_BODY

query
SELECT strftime(TIMESTAMP '1992-03-02 20:32:45', '%A, %-d %B %Y - %I:%M:%S %p');
----
strftime
Monday, 2 March 1992 - 08:32:45 PM

# DOCS_TEST: example_003

# DOCS_TEST_BODY

query
SELECT strptime('02/03/1992', '%d/%m/%Y');
----
strptime
1992-03-02 00:00:00

# DOCS_TEST: example_004

# DOCS_TEST_BODY

query
SELECT strptime('Monday, 2 March 1992 - 08:32:45 PM', '%A, %-d %B %Y - %I:%M:%S %p');
----
strptime
1992-03-02 20:32:45

# DOCS_TEST: example_005

# DOCS_TEST_BODY

query error
SELECT strptime('02/50/1992', '%d/%m/%Y') AS x;
----
db error: ERROR: Could not parse string "02/50/1992" according to format specifier "%d/%m/%Y"
02/50/1992
   ^
Error: Month out of range, expected a value between 1 and 12


# DOCS_TEST: example_008

# DOCS_TEST_BODY

query
SELECT try_strptime('02/50/1992', '%d/%m/%Y') AS x;
----
x
NULL

# DOCS_TEST: example_006

statement ok
CREATE TABLE dates ("d" DATE, "ts" TIMESTAMP);

statement ok
COPY (SELECT * FROM (VALUES
    ('02/03/1992', 'Monday, 2 March 1992 - 08:32:45 PM')
) AS t("d", "ts")) TO '/tmp/${__DATABASE__}_sql_functions_dateformat_example_006_1_test_csv.csv' (FORMAT CSV, HEADER false, DELIMITER ',');

statement ok
COPY dates FROM '/tmp/${__DATABASE__}_sql_functions_dateformat_example_006_1_test_csv.csv' (DATEFORMAT '%d/%m/%Y', TIMESTAMPFORMAT '%A, %-d %B %Y - %I:%M:%S %p');

# DOCS_TEST_RAW
#| COPY dates FROM 'test.csv' (DATEFORMAT '%d/%m/%Y', TIMESTAMPFORMAT '%A, %-d %B %Y - %I:%M:%S %p');
#| SELECT * FROM dates;
#| ----
#| 1992-03-02	1992-03-02 20:32:45

# DOCS_TEST_BODY

query
SELECT * FROM dates;
----
d	ts
1992-03-02	1992-03-02 20:32:45

# DOCS_TEST: example_007

statement ok
COPY (SELECT * FROM (VALUES
    ('02/03/1992', 'Monday, 2 March 1992 - 08:32:45 PM')
) AS t("d", "ts")) TO '/tmp/${__DATABASE__}_sql_functions_dateformat_example_007_1_test_csv.csv' (FORMAT CSV, HEADER true, DELIMITER ',');

# DOCS_TEST_RAW
#| SELECT *
#| FROM read_csv('test.csv', dateformat = '%m/%d/%Y', timestampformat = '%A, %-d %B %Y - %I:%M:%S %p');

# DOCS_TEST_BODY

query
SELECT *
FROM read_csv('/tmp/${__DATABASE__}_sql_functions_dateformat_example_007_1_test_csv.csv', dateformat = '%m/%d/%Y', timestampformat = '%A, %-d %B %Y - %I:%M:%S %p');
----
d	ts
1992-02-03	1992-03-02 20:32:45
